--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55abe0b
+	base = 4edc5af
 	trimbase = 
 	parent = release/kinetic/adi_driver
-	previous = 
+	previous = 55abe0b
