--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 48f3b18
+	base = e53bb7d
 	trimbase = 
 	parent = arch/kinetic/adi_driver
-	previous = 
+	previous = 48f3b18
